@@ -8,10 +8,13 @@ NEW FEATURES:
  o Now it is possible to set the dimension on an empty list environment without
    first resizing it with length(), e.g. x <- listenv(); dim(x) <- c(2, 3).
 
- o Added is.matrix(), is.array(), as.vector() and as.matrix() for list
-   environments.
+ o Now it is possible to remove multiple elements by assigning NULL, e.g.
+   x[c(2:3, 10)] <- NULL.
 
  o Added lengths() for list environments.  Requires R (>= 3.3.0).
+
+ o Added is.matrix(), is.array(), as.vector() and as.matrix() for list
+   environments.
 
 BUG FIXES:
 
